syntax = "proto3";

package cortex.v1;
option go_package = "github.com/yaront1111/cortex-os/core/pkg/pb/v1";

enum JobPriority {
  JOB_PRIORITY_UNSPECIFIED = 0;
  JOB_PRIORITY_BATCH       = 1;
  JOB_PRIORITY_INTERACTIVE = 2;
  JOB_PRIORITY_CRITICAL    = 3;
}

enum JobStatus {
  JOB_STATUS_UNSPECIFIED = 0;
  JOB_STATUS_COMPLETED   = 1;
  JOB_STATUS_FAILED      = 2;
}

message JobRequest {
  string job_id = 1;
  string topic = 2;                // logical topic / NATS subject
  JobPriority priority = 3;
  string context_ptr = 4;          // "redis://jobs/{id}/context" (future)
  string adapter_id = 5;
  map<string, string> env_vars = 6;
  reserved 7, 8, 9;
  string parent_job_id = 10;       // optional workflow chaining
  string workflow_id   = 11;       // optional workflow identifier
  int32 step_index     = 12;       // optional step position
}

message JobResult {
  string job_id = 1;
  JobStatus status = 2;
  string result_ptr = 3;           // "redis://jobs/{id}/result" (future)
  string worker_id = 4;
  int64 execution_ms = 5;
  reserved 6, 7, 8;
}
