syntax = "proto3";

package cordum.v1;
option go_package = "github.com/cordum/cordum/sdk/gen/go/cordum/v1";

service CordumApi {
  rpc SubmitJob(SubmitJobRequest) returns (SubmitJobResponse);
  rpc GetJobStatus(GetJobStatusRequest) returns (GetJobStatusResponse);
}

message SubmitJobRequest {
  string prompt       = 1;
  string topic        = 2; // e.g. "job.default" or "job.custom"
  string adapter_id   = 3;
  string priority     = 4; // "interactive", "batch" (optional for now)
  string org_id       = 5;
  string team_id      = 6;
  string project_id   = 7;
  string principal_id = 8;
  string idempotency_key = 9;
  string actor_id     = 10;
  string actor_type   = 11; // "human" | "service" (optional)
  string pack_id      = 12;
  string capability   = 13;
  repeated string risk_tags = 14;
  repeated string requires  = 15;
  map<string, string> labels = 16;
  string memory_id   = 17;
}

message SubmitJobResponse {
  string job_id   = 1;
  string trace_id = 2;
}

message GetJobStatusRequest {
  string job_id = 1;
}

message GetJobStatusResponse {
  string job_id     = 1;
  string status     = 2;
  string result_ptr = 3;
}
